<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/RRCVImageSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true" >

        <ImageView
            android:id="@+id/ivCVImportPict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/current_item"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/abcs_add_your_own_squ_icon" />

        <Button
            android:id="@+id/bCVSaveToDB"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/blue_circle_button"
            android:enabled="false"
            android:soundEffectsEnabled="true"
            android:text="@string/save"
            android:textColor="@color/black" />
    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCVTakePict"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bCVFilePict"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="@string/pict_from_file"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/etCVObjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_object_name"
        android:inputType="textAutoComplete"
        android:imeOptions="actionNext"
        android:nextFocusForward="@+id/etCVCatName"
        android:focusableInTouchMode="true" >    </EditText>

    <AutoCompleteTextView
        android:id="@+id/etCVCatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textAutoComplete"
        android:imeOptions="actionDone"
        android:focusableInTouchMode="true" 
        android:hint="@string/enter_category" />

</LinearLayout>