<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPlay" >
    
    <RelativeLayout 
         android:id="@+id/rrVFandAni"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >

    <ViewFlipper
        android:id="@+id/vfMVFlipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- The child Views/Layout to flip -->


        <!-- Layout 1 for 1st Screen -->

        <RelativeLayout
            android:id="@+id/rrVF1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivMVPict1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/current_item"
                android:scaleType="centerCrop"
                android:src="@drawable/swan" />

            <TextView
                android:id="@+id/tvMVItemLetter1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:minWidth="60dp"
                android:layout_alignBottom="@id/ivMVPict1"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/letter_background"
                android:gravity="center"
                android:text="@string/s_lc"
                android:textColor="@color/yellow"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Layout 2 for 2nd Screen -->

        <RelativeLayout
            android:id="@+id/rrVF2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ivMVPict2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/current_item"
                android:scaleType="centerCrop"
                android:src="@drawable/elephant" />

            <TextView
                android:id="@+id/tvMVItemLetter2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:minWidth="60dp"
                android:layout_alignBottom="@id/ivMVPict2"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/letter_background"
                android:gravity="center"
                android:text="@string/e_lc"
                android:textColor="@color/yellow"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ViewFlipper>
    
    <TextView
        android:id="@+id/tvMVAniLetters"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:minWidth="60dp"
        android:layout_alignBottom="@id/vfMVFlipper"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/letter_background"
        android:gravity="center"
        android:text="@string/w_lc"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        android:textStyle="bold" />
    
    </RelativeLayout>
        

    <TextView
        android:id="@+id/tvMVAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/alphabet_lcs"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llOptions"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bMVOption1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@drawable/pastel_blue_button"
            android:text="@string/option"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVOption2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="34"
            android:background="@drawable/pastel_green_button"
            android:text="@string/option"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVOption3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:background="@drawable/pastel_purple_button"
            android:text="@string/option"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMVDirReveal"
        style="android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bMVdescend"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:background="@drawable/orange_button"
            android:drawableLeft="@drawable/ic_previous_item"
            android:padding="5dp"
            android:text="@string/prev"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVRandom"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="34"
            android:background="@drawable/blue_button"
            android:drawableRight="@drawable/ic_rand"
            android:padding="5dp"
            android:text="@string/rand"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVascend"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:background="@drawable/red_button"
            android:drawableRight="@drawable/ic_next_item"
            android:padding="5dp"
            android:text="@string/next"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llsounds"
        style="android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bMVAbc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:background="@drawable/pink_button"
            android:drawableRight="@drawable/ic_sound"
            android:enabled="true"
            android:padding="5dp"
            android:text="@string/abc"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVReveal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="34"
            android:background="@drawable/green_button"
            android:padding="5dp"
            android:text="@string/reveal"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bMVObSound"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:background="@drawable/yellow_button"
            android:drawableRight="@drawable/ic_sound"
            android:enabled="true"
            android:padding="5dp"
            android:text="@string/obj"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>